--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<h1>testing</h1>tags
-<div id='root'></div>
-<script src='./dist/test-tags.js'></script>
+<head>
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.css"
+</head>
+<div id='root' style='width: 30rem; margin: 64px auto;'></div>
+<script src='./dist/gh-pages.js'></script>
